fix table orderitem by addig oder fk and removing the quantity column
